// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--list-different works in CI just as in a non-TTY mode  1`] = `
{
  "stderr": "",
  "stdout": "unformatted.js",
  "write": [],
}
`;

exports[`--list-different works in CI just as in a non-TTY mode  2`] = `
{
  "stderr": "",
  "stdout": "unformatted.js",
  "write": [],
}
`;

exports[`checks stdin with --list-different  1`] = `
{
  "write": [],
}
`;

exports[`checks stdin with -l (alias for --list-different)  1`] = `
{
  "write": [],
}
`;
